
    YARN-3045. Implement NM writing container lifecycle events to Timeline
    Service v2. (Naganarasimha G R via junping_du)

    YARN-4025. Deal with byte representations of Longs in writer code.
    (Sangjin Lee and Vrushali C via junping_du)

    YARN-3814. REST API implementation for getting raw entities in
    TimelineReader (Varun Saxena via sjlee)

  IMPROVEMENTS

    YARN-3276. Code cleanup for timeline service API records. (Junping Du via
    zjshen)

    YARN-3706. Generalize native HBase writer for additional tables (Joep
    Rottinghuis via sjlee)

    YARN-3836. add equals and hashCode to TimelineEntity and other classes in
    the data model (Li Lu via sjlee)

  OPTIMIZATIONS

  BUG FIXES

    YARN-3377. Fixed test failure in TestTimelineServiceClientIntegration.
    (Sangjin Lee via zjshen)

    YARN-3562. unit tests failures and issues found from findbug from earlier
    ATS checkins (Naganarasimha G R via sjlee)

    YARN-3634. TestMRTimelineEventHandling and TestApplication are broken. (
    Sangjin Lee via junping_du)

    YARN-3726. Fix TestHBaseTimelineWriterImpl unit test failure by fixing its
    test data (Vrushali C via sjlee)

    YARN-3721. build is broken on YARN-2928 branch due to possible dependency
    cycle (Li Lu via sjlee)

    YARN-3792. Test case failures in TestDistributedShell and some issue fixes
    related to ATSV2 (Naganarasimha G R via sjlee)

    YARN-3908. Fixed bugs in HBaseTimelineWriterImpl. (Vrushali C and Sangjin
    Lee via zjshen)

    YARN-3993. Changed to use the AM flag in ContainerContext determine AM
    container in TestPerNodeTimelineCollectorsAuxService. (Sunil G via zjshen)

    YARN-3984. Adjusted the event column key schema and avoided missing empty
    event. (Vrushali C via zjshen)

    YARN-4064. build is broken at TestHBaseTimelineWriterImpl.java (sjlee)

    YARN-4058. Miscellaneous issues in NodeManager project (Naganarasimha G R
    via sjlee)

Trunk - Unreleased

  INCOMPATIBLE CHANGES
